<resources>
    <string name="app_name">Центр валют</string>
    <string name="take_money">Выберите курс валют</string>
    <string name="login">Авторизация</string>
    <string name="login_ed">Введите логин</string>
    <string name="pass_ed">Введите пароль</string>
    <string name="enter">Зайти</string>
    <string name="rates">Курсы валют</string>
    <string name="data">Выбор данных</string>
    <string name="enter_data">Введите сумму</string>
    <string name="next">Перейти</string>
    <string name="your_data">Пользовательские данные</string>
    <string name="delete">Удалить</string>
    <string-array name="rates_array">
        <item>USD</item>
        <item>EUR</item>
        <item>RUB</item>
        <item>GBP</item>
        <item>JPY</item>
        <item>KZT</item>
        <item>AED</item>
        <item>BYN</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>