<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20sp"
        android:text="@string/data"
        android:textSize="28sp"
        android:textStyle="bold"/>

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"
        android:layout_marginTop="30sp"/>

    <EditText
        android:id="@+id/ed_data"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spinner"
        android:layout_marginTop="20sp"
        android:hint="@string/enter_data"
        android:textSize="20sp"/>

    <Spinner
        android:id="@+id/sp1"
        android:layout_width="150sp"
        android:layout_height="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ed_data"
        android:layout_marginTop="100sp"/>

    <Spinner
        android:id="@+id/sp2"
        android:layout_width="150sp"
        android:layout_height="50dp"
        app:layout_constraintStart_toEndOf="@id/sp1"
        app:layout_constraintTop_toBottomOf="@id/ed_data"
        android:layout_marginStart="35sp"
        android:layout_marginTop="100sp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/next_btn"
        android:layout_width="match_parent"
        android:layout_height="60sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sp1"
        android:layout_marginTop="250sp"
        android:text="@string/next"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:background="@drawable/button"/>

</androidx.constraintlayout.widget.ConstraintLayout>